--- a/Codigo/Frota/FrotaWeb/Views/VeiculoPecaInsumo/Edit.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/VeiculoPecaInsumo/Edit.cshtml
@@ -1,25 +1,57 @@
 ﻿@model FrotaWeb.Models.VeiculoPecaInsumoViewModel
+@using Core.DTO
+@using Core
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
+    var veiculos = ViewData["Veiculos"] as IEnumerable<VeiculoDTO> ?? Enumerable.Empty<VeiculoDTO>();
+    var pecainsumos = ViewData["PecaInsumos"] as IEnumerable<Pecainsumo> ?? Enumerable.Empty<Pecainsumo>();
 }
 
-<h1>Edit</h1>
+<link rel="stylesheet" href="~/css/form-pages.css" asp-append-version="true" />
 
-<h4>VeiculoPecaInsumoViewModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<main class="main_content container">
+    <div class="titulo-pagina">
+        <a href="javascript:history.back()" class="voltar">
+            <i class="fa fa-arrow-left"></i> Voltar
+        </a>
+        <h1>Lançamento de Peças e Insumos de Veículo</h1>
+    </div>
+    <div class="fomulario">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="IdVeiculo" class="control-label"></label>
-                <input asp-for="IdVeiculo" class="form-control" />
+                <select asp-for="IdVeiculo" class="custom-select select2">
+                    @if (!veiculos.Any())
+                    {
+                        <option value="" disabled selected hidden>Veiculo</option>
+                    }
+                    else
+                    {
+                        foreach (var veiculo in veiculos)
+                        {
+                            <option value="@veiculo.Id">@veiculo.Placa</option>
+                        }
+                    }
+                </select>
                 <span asp-validation-for="IdVeiculo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IdPecaInsumo" class="control-label"></label>
-                <input asp-for="IdPecaInsumo" class="form-control" />
+                <select asp-for="IdPecaInsumo" class="custom-select select2">
+                    @if (!pecainsumos.Any())
+                    {
+                        <option value="" disabled selected hidden>Peça Insumo</option>
+                    }
+                    else
+                    {
+                        foreach (var pecaInsumo in pecainsumos)
+                        {
+                            <option value="@pecaInsumo.Id">@pecaInsumo.Descricao</option>
+                        }
+                    }
+                </select>
                 <span asp-validation-for="IdPecaInsumo" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -42,17 +74,15 @@
                 <input asp-for="KmProximaTroca" class="form-control" />
                 <span asp-validation-for="KmProximaTroca" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="buttons">
+                <input type="submit" value="Salvar Alterações" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+</main>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
