--- a/Codigo/Frota/FrotaWeb/Views/Abastecimento/Edit.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Abastecimento/Edit.cshtml
@@ -1,9 +1,15 @@
 ﻿@model FrotaWeb.Models.AbastecimentoViewModel
 
-<h4>AbastecimentoViewModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<link rel="stylesheet" href="~/css/form-pages.css" asp-append-version="true" />
+
+<main class="main_content container">
+    <div class="titulo-pagina">
+        <a href="javascript:history.back()" class="voltar">
+            <i class="fa fa-arrow-left"></i> Voltar
+        </a>
+        <h1>Lançamento de Abastecimento</h1>
+    </div>
+    <div class="fomulario">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -36,16 +42,12 @@
                 <input asp-for="Litros" class="form-control" />
                 <span asp-validation-for="Litros" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" style="margin-left:200px;" />
+            <div class="buttons">
+                <input type="submit" value="Salvar Alterações" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index" style="margin-left:200px;">Back to List</a>
-</div>
+</main>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
