--- a/Codigo/Frota/FrotaWeb/Views/Fornecedor/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Fornecedor/Create.cshtml
@@ -1,9 +1,19 @@
 ﻿@model FrotaWeb.Models.FornecedorViewModel
 
-<h4>FornecedorViewModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+@{
+    var estados = ViewData["Estados"] as List<string>;
+}
+
+<link rel="stylesheet" href="~/css/form-pages.css" asp-append-version="true" />
+
+<main class="main_content container">
+    <div class="titulo-pagina">
+        <a href="javascript:history.back()" class="voltar">
+            <i class="fa fa-arrow-left"></i> Voltar
+        </a>
+        <h1>Cadastro de Fornecedor</h1>
+    </div>
+    <div class="fomulario">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -13,44 +23,58 @@
             </div>
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" id="nomeEmpresaInput" />
+                <input asp-for="Nome" class="form-control" id="nomeEmpresa" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <hr class="divisor">
+            <div class="form-group w40">
                 <label asp-for="Cep" class="control-label"></label>
-                <input asp-for="Cep" class="form-control" id="cepInput" />
+                <input asp-for="Cep" class="form-control" id="cep" maxlength="9" />
                 <span asp-validation-for="Cep" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group w50">
                 <label asp-for="Rua" class="control-label"></label>
-                <input asp-for="Rua" class="form-control" id="logradouroInput" />
+                <input asp-for="Rua" class="form-control" id="rua" />
                 <span asp-validation-for="Rua" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group w40">
                 <label asp-for="Bairro" class="control-label"></label>
-                <input asp-for="Bairro" class="form-control" id="bairroInput" />
+                <input asp-for="Bairro" class="form-control" id="bairro" />
                 <span asp-validation-for="Bairro" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Numero" class="control-label"></label>
-                <input asp-for="Numero" class="form-control" id="numeroInput" />
-                <span asp-validation-for="Numero" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            <div class="form-group w60">
                 <label asp-for="Complemento" class="control-label"></label>
                 <input asp-for="Complemento" class="form-control" />
                 <span asp-validation-for="Complemento" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group w10">
+                <label asp-for="Numero" class="control-label"></label>
+                <input asp-for="Numero" class="form-control" />
+                <span asp-validation-for="Numero" class="text-danger"></span>
+            </div>
+            <div class="form-group w40">
                 <label asp-for="Cidade" class="control-label"></label>
-                <input asp-for="Cidade" class="form-control" id="cidadeInput" />
+                <input asp-for="Cidade" class="form-control" id="cidade" />
                 <span asp-validation-for="Cidade" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group w10">
                 <label asp-for="Estado" class="control-label"></label>
-                <input asp-for="Estado" class="form-control" id="estadoInput" />
+                <select asp-for="Estado" class="custom-select select2" id="Estado">
+                    @if (!estados.Any())
+                    {
+                        <option value="" disabled selected hidden>Frota</option>
+                    }
+                    else
+                    {
+                        foreach (var estado in estados)
+                        {
+                            <option value="@estado">@estado</option>
+                        }
+                    }
+                </select>
                 <span asp-validation-for="Estado" class="text-danger"></span>
             </div>
+            <hr class="divisor">
             <div class="form-group">
                 <label asp-for="Latitude" class="control-label"></label>
                 <input asp-for="Latitude" class="form-control" />
@@ -66,16 +90,12 @@
                 <input asp-for="Ativo" class="form-control" />
                 <span asp-validation-for="Ativo" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="buttons">
+                <input type="submit" value="Cadastrar Fornecedor" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+</main>
 
 @section Scripts {
     @{
@@ -83,6 +103,43 @@
     }
 
     <script>
+        document.getElementById("cep").addEventListener("blur", function () {
+            const cep = this.value.replace(/\D/g, ""); // Remove caracteres não numéricos
+
+            if (cep.length === 8) {
+                fetch(`https://viacep.com.br/ws/${cep}/json/`)
+                    .then(response => {
+                        if (!response.ok) {
+                            throw new Error("Erro ao buscar CEP.");
+                        }
+                        return response.json();
+                    })
+                    .then(data => {
+                        if (data.erro) {
+                            alert("CEP não encontrado.");
+                            return;
+                        }
+
+                        // Preenche os campos com os dados retornados
+                        document.getElementById("rua").value = data.logradouro || "";
+                        document.getElementById("bairro").value = data.bairro || "";
+                        document.getElementById("cidade").value = data.localidade || "";
+                        // Seletor para estado
+                        const estadoSelect = document.getElementById("Estado");
+                        estadoSelect.value = data.uf || "";
+                        if (!estadoSelect.value) {
+                            alert("Estado não encontrado no seletor.");
+                        }
+                    })
+                    .catch(error => {
+                        console.error("Erro ao consultar o CEP:", error);
+                        alert("Não foi possível consultar o CEP.");
+                    });
+            } else {
+                alert("CEP inválido. Por favor, insira um CEP válido.");
+            }
+        });
+
         document.getElementById('cnpjInput').addEventListener('change', function () {
             var cnpj = this.value.trim();
             cnpj = cnpj.replace(/[^\d]+/g, '');
@@ -102,13 +159,18 @@
                     })
                     .then(data => {
                         if (!data.error) {
-                            document.getElementById('nomeEmpresaInput').value = data.fantasia;
-                            document.getElementById('logradouroInput').value = data.logradouro;
+                            document.getElementById('nomeEmpresa').value = data.fantasia;
+                            document.getElementById("rua").value = data.logradouro;
                             document.getElementById('numeroInput').value = (data.numero === "S/N") ? "00" : data.numero;
-                            document.getElementById('bairroInput').value = data.bairro;
-                            document.getElementById('cidadeInput').value = data.municipio;
-                            document.getElementById('estadoInput').value = data.uf;
-                            document.getElementById('cepInput').value = data.cep.replace(/[^\d]/g, '');
+                            document.getElementById("bairro").value = data.bairro;
+                            document.getElementById("cidade").value = data.municipio;
+                            document.getElementById('cep').value = data.cep.replace(/[^\d]/g, '');
+                            // Seletor para estado
+                            const estadoSelect = document.getElementById("Estado");
+                            estadoSelect.value = data.uf || "";
+                            if (!estadoSelect.value) {
+                                alert("Estado não encontrado no seletor.");
+                            }
                         } else {
                             alert('CNPJ não encontrado.');
                         }
