--- a/Codigo/Frota/FrotaWeb/Views/Frota/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Frota/Create.cshtml
@@ -1,15 +1,15 @@
 ﻿@model FrotaWeb.Models.FrotaViewModel
 
-@{
-    ViewData["Title"] = "Create";
-}
+<link rel="stylesheet" href="~/css/form-pages.css" asp-append-version="true" />
 
-<h1>Create</h1>
-
-<h4>FrotaViewModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<main class="main_content container">
+    <div class="titulo-pagina">
+        <a href="javascript:history.back()" class="voltar">
+            <i class="fa fa-arrow-left"></i> Voltar
+        </a>
+        <h1>Cadastro de Frota</h1>
+    </div>
+    <div class="fomulario">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -62,16 +62,12 @@
                 <input asp-for="Estado" class="form-control" />
                 <span asp-validation-for="Estado" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="buttons">
+                <input type="submit" value="Cadastrar Frota" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+</main>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
