--- a/Codigo/Frota/FrotaWeb/Views/ManutencaoPecaInsumo/Edit.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/ManutencaoPecaInsumo/Edit.cshtml
@@ -1,9 +1,15 @@
 ﻿@model FrotaWeb.Models.ManutencaoPecaInsumoViewModel
 
-<h4>ManutencaoPecaInsumoViewModel</h4>
-<hr />
-<div class="row">
-	<div class="col-md-4">
+<link rel="stylesheet" href="~/css/form-pages.css" asp-append-version="true" />
+
+<main class="main_content container">
+	<div class="titulo-pagina">
+		<a href="javascript:history.back()" class="voltar">
+			<i class="fa fa-arrow-left"></i> Voltar
+		</a>
+		<h1>Cadastro de Peças e Insumos de Manutenção</h1>
+	</div>
+	<div class="fomulario">
 		<form asp-action="Edit">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<div class="form-group">
@@ -46,16 +52,12 @@
 				<input asp-for="Subtotal" class="form-control" />
 				<span asp-validation-for="Subtotal" class="text-danger"></span>
 			</div>
-			<div class="form-group">
-				<input type="submit" value="Save" class="btn btn-primary" />
+			<div class="buttons">
+				<input type="submit" value="Salvar Alterações" class="btn btn-primary" />
 			</div>
 		</form>
 	</div>
-</div>
-
-<div>
-	<a asp-action="Index">Back to List</a>
-</div>
+</main>
 
 @section Scripts {
 	@{
