--- a/Codigo/Frota/FrotaWeb/Views/Veiculo/Edit.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Veiculo/Edit.cshtml
@@ -6,156 +6,112 @@
 	var modelos = ViewData["Modelos"] as IEnumerable<ModeloVeiculoDTO> ?? Enumerable.Empty<ModeloVeiculoDTO>();
 }
 
-<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-<link rel="stylesheet" href="~/css/form.css" asp-append-version="true" />
-<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<link rel="stylesheet" href="~/css/form-pages.css" asp-append-version="true" />
 
-<main class="container mt-4">
-	<h4 class="page-title fs-2">
-		<i class="fa fa-car mr-3"></i>
-		Veículos
-	</h4>
-	<h1 class="my-text-label fs-3 mt-4 mb-4">Editar Veículo</h1>
-	<form asp-action="Edit" class="creator-form fs-5">
-		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
-		<div class="row mb-3">
-			<div class="col-md-6">
-				<div class="type-container offset-md-1 itens-center">
-					<label asp-for="IdUnidadeAdministrativa" class="label">Unidade Administrativa</label>
-					<select asp-for="IdUnidadeAdministrativa" class="custom-select select2">
-						@if (!unidades.Any())
+<main class="main_content container">
+	<div class="titulo-pagina">
+		<a href="javascript:history.back()" class="voltar">
+			<i class="fa fa-arrow-left"></i> Voltar
+		</a>
+		<h1>Cadastro de Veículo</h1>
+	</div>
+	<div class="fomulario">
+		<form asp-action="Edit">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<div class="form-group">
+				<label asp-for="IdModeloVeiculo" class="label">Modelo Veículo</label>
+				<select asp-for="IdModeloVeiculo" class="custom-select select2">
+					@if (!modelos.Any())
+					{
+						<option value="" disabled selected hidden>Modelo</option>
+					}
+					else
+					{
+						foreach (var modelo in modelos)
 						{
-							<option value="" disabled selected hidden>Administrativo</option>
+							<option value="@modelo.Id">@modelo.Nome</option>
 						}
-						else
+					}
+				</select>
+				<span asp-validation-for="IdModeloVeiculo" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Placa" class="label">Placa</label>
+				<input asp-for="Placa" class="form-control" placeholder="ABC1D23" />
+				<span asp-validation-for="Placa" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Chassi" class="label">Chassi</label>
+				<input asp-for="Chassi" class="form-control" placeholder="9BWZZZ377VT123456" />
+				<span asp-validation-for="Chassi" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Valor" class="label">Valor do Veículo</label>
+				<input asp-for="Valor" class="form-control" placeholder="80000" />
+				<span asp-validation-for="Valor" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="DataReferenciaValor" class="label">Data Referência (Valor)</label>
+				<input asp-for="DataReferenciaValor" class="form-control campo-data" placeholder="" />
+				<span asp-validation-for="DataReferenciaValor" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Odometro" class="label">Odômetro</label>
+				<input asp-for="Odometro" class="form-control" placeholder="26000" />
+				<span asp-validation-for="Odometro" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Cor" class="label">Cor</label>
+				<input asp-for="Cor" class="form-control" placeholder="Preto" />
+				<span asp-validation-for="Cor" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Status" class="label">Status</label>
+				<input asp-for="Status" class="form-control" placeholder="Em Uso" />
+				<span asp-validation-for="Status" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Ano" class="label">Ano</label>
+				<input asp-for="Ano" class="form-control" placeholder="AnoEx" />
+				<span asp-validation-for="Ano" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Modelo" class="label">Modelo</label>
+				<input asp-for="Modelo" class="form-control" placeholder="2024" />
+				<span asp-validation-for="Modelo" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Renavan" class="label">Renavan</label>
+				<input asp-for="Renavan" class="form-control" placeholder="12345678901" />
+				<span asp-validation-for="Renavan" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="VencimentoIpva" class="label">Vencimento Ipva</label>
+				<input asp-for="VencimentoIpva" class="form-control campo-data" placeholder="" />
+				<span asp-validation-for="VencimentoIpva" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="IdUnidadeAdministrativa" class="label">Unidade Administrativa</label>
+				<select asp-for="IdUnidadeAdministrativa" class="custom-select select2">
+					@if (!unidades.Any())
+					{
+						<option value="" disabled selected hidden>Administrativo</option>
+					}
+					else
+					{
+						foreach (var unidade in unidades)
 						{
-							foreach (var unidade in unidades)
-							{
-								<option value="@unidade.Id">@unidade.Nome</option>
-							}
+							<option value="@unidade.Id">@unidade.Nome</option>
 						}
-					</select>
-					<span asp-validation-for="IdUnidadeAdministrativa" class="text-danger"></span>
-				</div>
+					}
+				</select>
+				<span asp-validation-for="IdUnidadeAdministrativa" class="text-danger"></span>
 			</div>
-		</div>
-		<div class="row mb-3">
-			<div class="col-md-6">
-				<div class="type-container offset-md-1 itens-center">
-					<label asp-for="Placa" class="label">Placa</label>
-					<input asp-for="Placa" class="form-control" placeholder="ABC1D23" />
-					<span asp-validation-for="Placa" class="text-danger"></span>
-				</div>
+			<div class="buttons">
+				<input type="submit" value="Salvar Alterações" class="btn btn-primary" />
 			</div>
-			<div class="col-md-6">
-				<div class="type-container offset-md-2 itens-center">
-					<label asp-for="Chassi" class="label">Chassi</label>
-					<input asp-for="Chassi" class="form-control" placeholder="9BWZZZ377VT123456" />
-					<span asp-validation-for="Chassi" class="text-danger"></span>
-				</div>
-			</div>
-		</div>
-		<div class="row mb-3">
-			<div class="col-md-6">
-				<div class="type-container offset-md-1 itens-center">
-					<label asp-for="Valor" class="label">Valor do Veículo</label>
-					<input asp-for="Valor" class="form-control" placeholder="80000" />
-					<span asp-validation-for="Valor" class="text-danger"></span>
-				</div>
-			</div>
-			<div class="col-md-6">
-				<div class="type-container offset-md-2 itens-center">
-					<label asp-for="IdModeloVeiculo" class="label">Modelo Veículo</label>
-					<select asp-for="IdModeloVeiculo" class="custom-select select2">
-						@if (!modelos.Any())
-						{
-							<option value="" disabled selected hidden>Modelo</option>
-						}
-						else
-						{
-							foreach (var modelo in modelos)
-							{
-								<option value="@modelo.Id">@modelo.Nome</option>
-							}
-						}
-					</select>
-					<span asp-validation-for="IdModeloVeiculo" class="text-danger"></span>
-				</div>
-			</div>
-		</div>
-		<div class="row mb-3">
-			<div class="col-md-6">
-				<div class="type-container offset-md-1 itens-center">
-					<label asp-for="DataReferenciaValor" class="label">Data Referência (Valor)</label>
-					<input asp-for="DataReferenciaValor" class="form-control campo-data" placeholder="" />
-					<span asp-validation-for="DataReferenciaValor" class="text-danger"></span>
-				</div>
-			</div>
-			<div class="col-md-6">
-				<div class="type-container offset-md-2 itens-center">
-					<label asp-for="Cor" class="label">Cor</label>
-					<input asp-for="Cor" class="form-control" placeholder="Preto" />
-					<span asp-validation-for="Cor" class="text-danger"></span>
-				</div>
-			</div>
-		</div>
-		<div class="row mb-3">
-			<div class="col-md-6">
-				<div class="type-container offset-md-1 itens-center">
-					<label asp-for="Odometro" class="label">Odômetro</label>
-					<input asp-for="Odometro" class="form-control" placeholder="26000" />
-					<span asp-validation-for="Odometro" class="text-danger"></span>
-				</div>
-			</div>
-			<div class="col-md-6">
-				<div class="type-container offset-md-2 itens-center">
-					<label asp-for="Status" class="label">Status</label>
-					<input asp-for="Status" class="form-control" placeholder="Em Uso" />
-					<span asp-validation-for="Status" class="text-danger"></span>
-				</div>
-			</div>
-		</div>
-		<div class="row mb-3">
-			<div class="col-md-6">
-				<div class="type-container offset-md-1 itens-center">
-					<label asp-for="Ano" class="label">Ano</label>
-					<input asp-for="Ano" class="form-control" placeholder="AnoEx" />
-					<span asp-validation-for="Ano" class="text-danger"></span>
-				</div>
-			</div>
-			<div class="col-md-6">
-				<div class="type-container offset-md-2 itens-center">
-					<label asp-for="Modelo" class="label">Modelo</label>
-					<input asp-for="Modelo" class="form-control" placeholder="2024" />
-					<span asp-validation-for="Modelo" class="text-danger"></span>
-				</div>
-			</div>
-		</div>
-		<div class="row mb-3">
-			<div class="col-md-6">
-				<div class="type-container offset-md-1 itens-center">
-					<label asp-for="Renavan" class="label">Renavan</label>
-					<input asp-for="Renavan" class="form-control" placeholder="12345678901" />
-					<span asp-validation-for="Renavan" class="text-danger"></span>
-				</div>
-			</div>
-			<div class="col-md-6">
-				<div class="type-container offset-md-2 itens-center">
-					<label asp-for="VencimentoIpva" class="label">Vencimento Ipva</label>
-					<input asp-for="VencimentoIpva" class="form-control campo-data" placeholder="" />
-					<span asp-validation-for="VencimentoIpva" class="text-danger"></span>
-				</div>
-			</div>
-		</div>
-		<div class="row mt-4">
-			<div class="col-12 col-md-6 mb-2 mb-md-0 itens-center">
-				<a asp-action="Index" class="my-button btn btn-danger btn-sm w-50 w-md-auto">Voltar</a>
-			</div>
-			<div class="col-12 col-md-6 d-flex justify-content-md-end itens-center">
-				<input type="submit" value="Salvar" class="my-button btn btn-success btn-sm w-50 w-md-auto botao-sucesso" />
-			</div>
-		</div>
-	</form>
+		</form>
+	</div>
 </main>
 
 @section Scripts {
