--- a/Codigo/Frota/FrotaWeb/Views/VeiculoPecaInsumo/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/VeiculoPecaInsumo/Create.cshtml
@@ -8,12 +8,16 @@
     var pecainsumos = ViewData["PecaInsumos"] as IEnumerable<Pecainsumo> ?? Enumerable.Empty<Pecainsumo>();
 }
 
-<h1>Create</h1>
+<link rel="stylesheet" href="~/css/form-pages.css" asp-append-version="true" />
 
-<h4>VeiculoPecaInsumoViewModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<main class="main_content container">
+    <div class="titulo-pagina">
+        <a href="javascript:history.back()" class="voltar">
+            <i class="fa fa-arrow-left"></i> Voltar
+        </a>
+        <h1>Lançamento de Peças e Insumos de Veículo</h1>
+    </div>
+    <div class="fomulario">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -70,16 +74,12 @@
                 <input asp-for="KmProximaTroca" class="form-control" />
                 <span asp-validation-for="KmProximaTroca" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="buttons">
+                <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+</main>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
