trocar o título de Frota para Frota Pública, edição do arquivo mwb para inclusão da coluna telefone e email na tabela pessoa, mudar o icon da aba de login, close #255

--- a/Codigo/Frota/FrotaWeb/Views/Home/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 @model FrotaWeb.Models.HomeViewModel
 
 <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
 
 
 
@@ -24,7 +25,7 @@
             </div>
             <div class="atalhos">
                 <button class="atalho">
-                    <img src="./driver.png" alt="">
+                    <span class="material-symbols-outlined">build</span>
                     <p>Adicionar Atalho</p>
                 </button>
             </div>
