--- a/Codigo/Frota/FrotaWeb/Views/Shared/_Layout.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Shared/_Layout.cshtml
@@ -41,8 +41,8 @@
             </button>
             <div class="inner">
                 <div class="header">
-                    <img src="~/img/logo.svg" class="logo" />
-                    <h1>Frota</h1>
+                    <img src="~/img/logo/logo.svg" class="logo" />
+                    <h1 class="tittle-application" style="{margin-left: 12px; margin-top: 2px; font-weight: 600; font-size: 16px !important; letter-spacing: 2px; color: #0C69AB;}">Frota Pública</h1>
                 </div>
                 <nav class="menu">
 
