--- a/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -55,6 +55,7 @@
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                fill: #0C69AB;
             }
 
         .right-section {
@@ -74,6 +75,10 @@
             justify-content: center;
             background-color: #D9E9F4;
         }
+
+            .form-container{
+                color: #0C69AB;
+            }
 
         .right-section img {
             width: 150px;
@@ -256,7 +261,8 @@
     <section class="right-section">
         <form id="account" method="post">
             <div class="form-container">
-                <img src="~/img/logo.png" alt="Frota logo" />
+                <img src="~/img/logo/logo.svg" alt="Frota logo" />
+                <h1>Frota Pública</h1>
                 <div asp-validation-summary="ModelOnly" class="messages"></div>
                 <div class="form">
                     <p>Cpf</p>
