--- a/Codigo/Frota/FrotaWeb/Views/SolicitacaoManutencao/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/SolicitacaoManutencao/Index.cshtml
@@ -1,5 +1,11 @@
 @model IEnumerable<FrotaWeb.Models.SolicitacaoManutencaoViewModel>
 
+@using Core.DTO
+
+@{
+    var veiculos = ViewData["Veiculos"] as IEnumerable<VeiculoDTO> ?? Enumerable.Empty<VeiculoDTO>();
+}
+
 <link rel="stylesheet" href="~/css/index-pages.css" asp-append-version="true" />
 
 <main class="main_content container">
@@ -10,6 +16,26 @@
         <h1>Solicitações de Manutenção</h1>
         <div class="acoes">
             <a asp-action="Create" class="btn btn-primario">Criar</a>
+            <div class="filtros">
+                <form id="formFiltro" method="get" action="@Url.Action("Index", "Manutencao")">
+                    <input type="hidden" name="page" value="0" />
+                    <label for="idVeiculo">Filtrar por Veículo:</label>
+                    <select id="idVeiculo" name="idVeiculo" class="custom-select select2" onchange="document.getElementById('formFiltro').submit();">
+                        <option value="">Todos os Veículos</option>
+                        @foreach (var veiculo in veiculos)
+                        {
+                            if (ViewBag.IdVeiculoSelecionado != null && ViewBag.IdVeiculoSelecionado == veiculo.Id)
+                            {
+                                <option value="@veiculo.Id" selected>@veiculo.Placa</option>
+                            }
+                            else
+                            {
+                                <option value="@veiculo.Id">@veiculo.Placa</option>
+                            }
+                        }
+                    </select>
+                </form>
+            </div>
         </div>
     </div>
     <div class="table-responsive">
